fix build, agregado nuevas cosas

--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/smart-webcomponents@latest/source/styles/smart.fiori-dark.css"> 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/smart-webcomponents@latest/source/styles/smart.material-dark.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/smart-webcomponents@latest/source/styles/smart.bootstrap5-dark.css">
-  
-</head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
 <body>
   <app-root></app-root>
 </body> 
