--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,9 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/smart-webcomponents@latest/source/styles/smart.material-dark.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/smart-webcomponents@latest/source/styles/smart.bootstrap5-dark.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+</head>
 <body>
   <app-root></app-root>
 </body> 
